<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MemoCha</string>
    <string name="secret_letter_title">Secret Letter</string>
    <string name="secret_letter_content">Don\'t let the past bother you, You\'ve missed the good stuff.\nLife is short, If you don\'t pay attention once in a while, you might miss it.\nSome people make your life happy, just by their presence in the world.\nTrue love "never" ends, love will be like that forever.\nDon\'t frown. You never know who will fall in love with your smile.\nWhat do you do when the only person who can make you stop crying turns out to be making you cry?\nEverything was fine in the end. If it\'s not like that, then it\'s not the end</string>
    <string name="secret_letter_calendar">Sunday, 10 January 2021</string>
    <string name="secret_letter_coming_soon">Oops! This feature is not ready yet</string>
    <string name="button_retry">Retry</string>
    <string name="webview_error_load">Please check your internet connection and reload the page.\nError code: %s - %s</string>
    <string name="loading">Loading, please wait…</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="button_ok">OK</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_yes">Yes</string>
    <string name="button_no_thanks">No, thanks</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_import">Import</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_export">Export</string>
    <string name="method_cash">Cash</string>
    <string name="method_debit">Debit</string>
    <string name="method_transfer">Transfer</string>
    <string name="clock_theme_primary">Primary</string>
    <string name="clock_theme_secondary">Secondary</string>
    <string name="clock_theme_dark">Dark</string>
    <string name="clock_theme_yellow">Yellow</string>
    <string name="clock_theme_red_orange">Red Orange</string>
    <string name="clock_theme_pink">Pink</string>
    <string name="category_title">Category</string>
    <string name="category_book">Book</string>
    <string name="category_kitchen">Kitchen</string>
    <string name="category_electro">Electronic</string>
    <string name="category_fashion">Dress or Shirt</string>
    <string name="category_child_fashion">Children Chlotes</string>
    <string name="category_film">Music and Film</string>
    <string name="category_toys">Children Toys</string>
    <string name="category_phone">Handphone and Tablet</string>
    <string name="category_skin_care">Beauty</string>
    <string name="category_health">Health</string>
    <string name="category_computer">Computer and Laptop</string>
    <string name="category_gold">Gold</string>
    <string name="category_food_and_drink">Food and Drink</string>
    <string name="category_office_tools">Office and Stationery</string>
    <string name="category_sport">Sport</string>
    <string name="category_automotive">Automotive</string>
    <string name="category_pet_care">Pet Care</string>
    <string name="category_party">Party Supplies dan Craft</string>
    <string name="category_tools">Carpentry</string>
    <string name="category_property">Property</string>
    <string name="category_tour">Tour and Travel</string>
    <string name="category_others">Others</string>
    <string name="dasboard">Date</string>
    <string name="dasboard_greetings">Good %s, %s!</string>
    <string name="dasboard_time_morning">morning</string>
    <string name="dasboard_time_afternoon">afternoon</string>
    <string name="dasboard_time_evening">evening</string>
    <string name="dasboard_time_night">night</string>
    <string name="dasboard_book">Book</string>
    <string name="dasboard_identity">Identity</string>
    <string name="dasboard_needs">Needs</string>
    <string name="dasboard_history">History</string>
    <string name="dasboard_expenses_note">Expenses Notes</string>
    <string name="dasboard_expenses_category">Category…></string>
    <string name="dasboard_expenses_category_item">Others</string>
    <string name="dasboard_expenses_title_goods">Goods or Service</string>
    <string name="dasboard_expenses_title_amount">Price</string>
    <string name="dasboard_expenses_hint_goods">e.g: Herbs, Service, etc…</string>
    <string name="dasboard_expenses_hint_amount">Rp 0</string>
    <string name="dasboard_expenses_hint_note">Notes (Optional)</string>
    <string name="dasboard_expenses_button_add">Add</string>
    <string name="calendar_adjust">Adjust Date</string>
    <string name="calendar_adjust_info">The date selection will adjust the record time of the current expense report</string>
    <string name="setting_language_english">English (United States)</string>
    <string name="setting_language_bahasa">Bahasa Indonesia</string>
    <string name="setting_background_animation_on">On</string>
    <string name="setting_background_animation_off">Off</string>
    <string name="setting_background_music_on">On</string>
    <string name="setting_background_music_off">Off</string>
    <string name="setting_surname_on">On</string>
    <string name="setting_surname_off">Off</string>
    <string name="setting_notification_on">On</string>
    <string name="setting_notification_off">Off</string>
    <string name="settings_title_page">Settings</string>
    <string name="settings_application_language">Application Language</string>
    <string name="settings_application_language_information">Application language setting will apply system using your selected language and app will restart</string>
    <string name="settings_clock_theme">Clock Theme</string>
    <string name="settings_clock_theme_information">Your theme color choice will be applied to the clock theme color on the Home Page</string>
    <string name="settings_background_animation">Background Animation</string>
    <string name="settings_background_animation_information">Play an animation in the background of the screen while on the Home page</string>
    <string name="settings_surname">Username</string>
    <string name="settings_surname_reach_length">Length limit of Name is 30 character</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_state">Allow Notification</string>
    <string name="settings_notification_info">You will get a notification as a reminder to record your monthly expense</string>
    <string name="settings_badge_state">Badge</string>
    <string name="settings_theme_autumn">Autumn</string>
    <string name="settings_theme_sakura">Sakura</string>
    <string name="settings_theme_snow">Snow</string>
    <string name="settings_theme_summer">Summer</string>
    <string name="settings_music">Background Music Theme</string>
    <string name="settings_music_information">Plays background music only when on Home Page, Family Identity Page, and Needs List Page</string>
    <string name="settings_surname_state">Show Surname</string>
    <string name="settings_hint_surname">e.g: Rosyadah Assa\'diyah</string>
    <string name="settings_surname_info">It\'s better to use only letters or numbers, i.e: Shindra/Shindra17. The name will be displayed on the Home Page as the username and the column should be filled-in, if the column is empty it will automatically will turn off \'Show Surname\' status</string>
    <string name="settings_button_reset">Reset</string>
    <string name="settings_button_apply">Apply</string>
    <string name="settings_button_confirm">Confirm</string>
    <string name="settings_text_copyright">© 2022 RRS Production\nVersion 1.0</string>
    <string name="settings_text_made_with_love">┄── Creative Design ──┄</string>
    <string name="dialog_title_warning">Warning!</string>
    <string name="dialog_title_information">Information</string>
    <string name="dialog_title_data_error">Data Error</string>
    <string name="dialog_title_delete_from_history">Remove From History?</string>
    <string name="dialog_title_delete_needs">Remove \"%s\"?</string>
    <string name="dialog_title_delete_identity">Delete %s\'s data?</string>
    <string name="dialog_title_import_schedule">Import default \"%s Schedules\"?</string>
    <string name="dialog_title_export_history">Export %s\'s Expense History?</string>
    <string name="dialog_message_permission">Some in-app features may not work properly because they contain denied permissions</string>
    <string name="dialog_message_schedule_filled">You can only import the default schedule only if your schedule list is empty</string>
    <string name="dialog_message_delete_needs">Be careful, it will be deleted permanently!</string>
    <string name="dialog_message_delete_identity">Your data will be deleted permanently</string>
    <string name="dialog_message_import_schedule">This action can make your list contain the default schedule</string>
    <string name="dialog_message_data_error">An error occurred while trying to import %s %s monthly expense data into %s\'s %s page expense history</string>
    <string name="dialog_message_import_history">It needs a file containing text with a JSON structure format so that it can be applied to your expense list history</string>
    <string name="dialog_message_export_history">Are you sure want to export this record?</string>
    <string name="dialog_message_delete_all_history">Are you sure you want to delete all %s monthly expense records?</string>
    <string name="dialog_message_app_theme">Sorry, this feature is not ready yet</string>
    <string name="dialog_message_ask_reset">Are you sure you want to reset to default?</string>
    <string name="dialog_message_ask_before_quit">There are changes that you haven\'t applied, are you sure you want to leave this page?</string>
    <string name="dialog_message_switch_language">You are detected to change the language of the application using:\n\n\"%s\"\n\nPlease click \'OK\' button to restart the application</string>
    <string name="dialog_message_delete_from_history">Are you sure you want to delete this record from history?</string>
    <string name="dialog_button_reset">Reset</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="snackbar_setting_applied">Settings applied</string>
    <string name="snackbar_schedule_added">New schedule has been added</string>
    <string name="snackbar_schedule_updated">Schedule has been updated</string>
    <string name="snackbar_monthly_expenses_added">New data has been added to monthly expense history</string>
    <string name="snackbar_monthly_expenses_updated">Data has been updated</string>
    <string name="snackbar_monthly_expenses_deleted">Data has been deleted from history</string>
    <string name="snackbar_monthly_expenses_exported">%s\' expenses has been exported to %s</string>
    <string name="snackbar_monthly_expenses_exported_failed">Failed to exported %s\'s expenses</string>
    <string name="snackbar_monthly_expenses_imported">Data successfully imported</string>
</resources>