<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutSurname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SurnameFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSettingSurname"
        style="@style/TextBoldTealDark18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_surname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSurname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/textViewSettingSurname">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSurname"
                style="@style/TextRegularBlack14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_surname_state"
                app:layout_constraintBottom_toBottomOf="@id/surnameOnOff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/surnameOnOff" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/surnameOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:thumb="@drawable/selector_custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showText="false"
                app:track="@drawable/selector_custom_track" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/editTextSurname"
        style="@style/TextRegularBlack14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/background_edit_text_search"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="6dp"
        android:hint="@string/settings_hint_surname"
        android:inputType="text"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
        android:maxLines="1"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewSurname" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSurnameInfo"
        style="@style/TextRegularGrey12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/settings_surname_info"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/editTextSurname"
        app:layout_constraintRight_toRightOf="@id/editTextSurname"
        app:layout_constraintTop_toBottomOf="@id/editTextSurname" />

</androidx.constraintlayout.widget.ConstraintLayout>