<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NotificationPermissionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSettingNotification"
        style="@style/TextBoldTealDark18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_notification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewNotification"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/textViewSettingNotification">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewNotification"
                style="@style/TextRegularBlack14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_notification_state"
                app:layout_constraintBottom_toBottomOf="@id/notificationOnOff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/notificationOnOff" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notificationOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:thumb="@drawable/selector_custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showText="false"
                app:track="@drawable/selector_custom_track" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNotificationInfo"
        style="@style/TextRegularGrey12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/settings_notification_info"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@id/cardViewNotification"
        app:layout_constraintRight_toRightOf="@id/cardViewNotification"
        app:layout_constraintTop_toBottomOf="@id/cardViewNotification" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBadge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toBottomOf="@id/textViewNotificationInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewBadge"
                style="@style/TextRegularBlack14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/settings_badge_state"
                app:layout_constraintBottom_toBottomOf="@id/badgeOnOff"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/badgeOnOff" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/badgeOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:thumb="@drawable/selector_custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:showText="false"
                app:track="@drawable/selector_custom_track" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>